# ipyaudioworklet

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  build-post-process.js  codecov.yml  environment.yml  install.json  ipyaudioworklet.json  package-lock.json  package.json  pyproject.toml  pytest.ini  run_jupyter.bat  webpack.config.js
.github/workflows/: build.yml
binder/: environment.yml
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: introduction.ipynb
ipyaudioworklet/: __init__.py  _frontend.py  _version.py  audio.py
ipyaudioworklet/nbextension/: extension.js
ipyaudioworklet/tests/: conftest.py  test_audio.py  test_nbextension_path.py
src/: audio.ts  extension.ts  index.ts  plugin.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts  utils.ts
src/_static/: audio-processor.js
