[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab>3",
]
build-backend = "hatchling.build"

[project]
name = "ipyaudioworklet"
description = "A Jupyter Widget for Web Audio Recording using Audio Worklet"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
authors = [
    { name = "Sunao Hara", email = "sunao.hara@gmail.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "ipywidgets>=7.0.0",
    "traittypes",
    "numpy"
]
version = "0.3.0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = [
    "matplotlib"
]
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/naoh16/ipyaudioworklet"

[tool.hatch.build]
artifacts = [
    "ipyaudioworklet/nbextension/index.*",
    "ipyaudioworklet/labextension/*.tgz",
    "ipyaudioworklet/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipyaudioworklet/nbextension" = "share/jupyter/nbextensions/ipyaudioworklet"
"ipyaudioworklet/labextension" = "share/jupyter/labextensions/@naoh16/ipyaudioworklet"
"./install.json" = "share/jupyter/labextensions/@naoh16/ipyaudioworklet/install.json"
"./ipyaudioworklet.json" = "etc/jupyter/nbconfig/notebook.d/ipyaudioworklet.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "ipyaudioworklet/nbextension/index.js",
    "ipyaudioworklet/labextension/package.json",
]
skip-if-exists = [
    "ipyaudioworklet/nbextension/index.js",
    "ipyaudioworklet/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
github_url = "https://github.com/naoh16/ipyaudioworklet/"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}\""

[[tool.tbump.file]]
src = "package.json"
search = "\"version\": "

[[tool.tbump.file]]
src = "ipyaudioworklet/_version.py"
version_template = "version_info = ({major}, {minor}, {patch})"

[[tool.tbump.file]]
src = "ipyaudioworklet/_frontend.py"
search = "module_version = "

[[tool.tbump.file]]
src = "binder/environment.yml"
search = "ipyaudioworklet=="

[tool.tbump.version]
current = "0.3.0"
regex = '''
(?P<major>\d+)
\.
(?P<minor>\d+)
\.
(?P<patch>\d+)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

#  [[tool.tbump.before_commit]]
#  name = "check changelog"
#  cmd = "grep -q {new_version} Changelog.rst"

[[tool.tbump.after_push]]
name = "yarn build labextension"
cmd  = "yarn build"

[[tool.tbump.after_push]]
name = "hatch build wheel"
cmd  = "hatch build"
